--- a/Transfer.Web/Views/Bus/SearchResults.cshtml
+++ b/Transfer.Web/Views/Bus/SearchResults.cshtml
@@ -29,8 +29,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="City" disabled="disabled" class="form-control" />
                     </div>
                 </div>
@@ -44,8 +46,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="OrganisationName" class="form-control" />
                     </div>
                 </div>
@@ -59,8 +63,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="PeopleCopacity" class="form-control" />
                     </div>
                 </div>
@@ -76,8 +82,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="Make" class="form-control" />
                     </div>
                 </div>
@@ -91,8 +99,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="Model" class="form-control" />
                     </div>
                 </div>
