--- a/Transfer.Web/Views/Driver/Save.cshtml
+++ b/Transfer.Web/Views/Driver/Save.cshtml
@@ -62,8 +62,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="LastName" class="form-control" />
                             </div>
                         </div>
@@ -77,8 +79,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="FirstName" class="form-control" />
                             </div>
                         </div>
@@ -92,8 +96,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="MiddleName" class="form-control" />
                             </div>
                         </div>
@@ -122,8 +128,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="Phone" class="form-control" />
                             </div>
                         </div>
@@ -137,8 +145,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="EMail" class="form-control" />
                             </div>
                         </div>
