--- a/Transfer.Web/Views/TripRequest/MakeOffer.cshtml
+++ b/Transfer.Web/Views/TripRequest/MakeOffer.cshtml
@@ -82,8 +82,10 @@
                             Цена: <span class="red-text">*</span>
                         </div>
                         <div class="col-12">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-user-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input type="number" asp-for="Amount" class="form-control" />
                             </div>
                         </div>
