--- a/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
+++ b/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
@@ -58,8 +58,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="LastName" class="form-control" />
                             </div>
                         </div>
@@ -73,8 +75,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="FirstName" class="form-control" />
                             </div>
                         </div>
@@ -88,8 +92,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="MiddleName" class="form-control" />
                             </div>
                         </div>
@@ -118,8 +124,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="Phone" class="form-control" />
                             </div>
                         </div>
@@ -133,8 +141,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="Email" class="form-control" readonly="@(!Model.Id.IsNullOrEmpty())" />
                             </div>
                         </div>
