--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -2,23 +2,23 @@
 @using Transfer.Common.Extensions
 
 @section Styles {
-<link rel="stylesheet" href="~/source/fileinput.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="~/source/fileinput.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 }
 
-@section Scripts {
+    @section Scripts {
     <script src="~/source/fileinput.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="~/js/Bus/Save.js" crossorigin="anonymous"></script>
     <script src="~/js/BasicSave.js" crossorigin="anonymous"></script>
 }
 
-<div class="container">
-    <div class="row blank-row"></div>
-    <div class="row blank-row"></div>
-    <div class="row">
-        <div class="t-col col-12 crumbs">
-            ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>
-            &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
-            &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@Model.OrganisationId">@Model.OrganisationName</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
+    <div class="container">
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row">
+            <div class="t-col col-12 crumbs">
+                ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>
+                &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
+                &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@Model.OrganisationId">@Model.OrganisationName</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
             @if (Model.Id.IsNullOrEmpty())
             {
                 @:Новое транспортное средство
@@ -61,8 +61,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="Make" class="form-control" />
                             </div>
                         </div>
@@ -76,8 +78,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="LicenseNumber" class="form-control" />
                             </div>
                         </div>
@@ -93,8 +97,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="Model" class="form-control" />
                             </div>
                         </div>
@@ -108,8 +114,10 @@
                     </div>
                     <div class="row">
                         <div class="t-col col-12 form-group">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="Yaer" class="form-control" />
                             </div>
                         </div>
@@ -122,8 +130,10 @@
                     Посадочных мест: <span class="red-text">*</span>
                 </div>
                 <div class="t-col col-12 col-md-2 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="PeopleCopacity" class="form-control" />
                     </div>
                 </div>
@@ -187,8 +197,10 @@
                             Серия:
                         </div>
                         <div class="t-col col-12 white-text">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="RegSeries" class="form-control" />
                             </div>
                         </div>
@@ -200,8 +212,10 @@
                             Номер:
                         </div>
                         <div class="t-col col-12 white-text">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="RegNumber" class="form-control" />
                             </div>
                         </div>
@@ -241,8 +255,10 @@
                             Серия:
                         </div>
                         <div class="t-col col-12 white-text">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="OSAGOSeries" class="form-control" />
                             </div>
                         </div>
@@ -254,8 +270,10 @@
                             Номер:
                         </div>
                         <div class="t-col col-12 white-text">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="OSAGONumber" class="form-control" />
                             </div>
                         </div>
@@ -296,8 +314,10 @@
                             Номер:
                         </div>
                         <div class="t-col col-12 white-text">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="ToNumber" class="form-control" />
                             </div>
                         </div>
@@ -309,8 +329,10 @@
                             Срок действия:
                         </div>
                         <div class="t-col col-12 white-text">
-                            <div class="input-group input-group-icon">
-                                <i class="fas fa-pencil-alt input-group-text"></i>
+                            <div class="input-group">
+                                <span class="input-group-append input-group-icon">
+                                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                                </span>
                                 <input asp-for="ToDate" type="date" class="form-control" min="@DateTime.Now.AddDays(30).ToString("yyyy-MM-dd")" />
                             </div>
                         </div>
