--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -20,8 +20,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="Name" class="form-control" />
                     </div>
                 </div>
@@ -35,8 +37,10 @@
             </div>
             <div class="row">
                 <div class="t-col col-12 form-group">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="FullName" class="form-control" />
                     </div>
                 </div>
@@ -64,8 +68,10 @@
     </div>
     <div class="row form-row">
         <div class="t-col col-12 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
+            <div class="input-group">
+                <span class="input-group-append input-group-icon">
+                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                </span>
                 <input asp-for="Address" class="form-control" />
             </div>
         </div>
@@ -79,8 +85,10 @@
 
     <div class="row form-row">
         <div class="t-col col-12 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
+            <div class="input-group">
+                <span class="input-group-append input-group-icon">
+                    <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                </span>
                 <input asp-for="FactAddress" class="form-control" />
             </div>
         </div>
@@ -92,8 +100,10 @@
                     Телефон: <span class="red-text">*</span>
                 </div>
                 <div class="col-12">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input type="tel" asp-for="Phone" class="form-control phone_mask" />
                     </div>
                 </div>
@@ -105,8 +115,10 @@
                     Email:@* <span class="red-text">*</span>*@
                 </div>
                 <div class="col-12">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input type="email" asp-for="Email" class="form-control email_mask" />
                     </div>
                 </div>
@@ -119,8 +131,10 @@
                     ОГРН:
                 </div>
                 <div class="col-12">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="OGRN" class="form-control ogrn_mask" />
                     </div>
                 </div>
@@ -132,8 +146,10 @@
                     ИНН: <span class="red-text">*</span>
                 </div>
                 <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="INN" class="form-control inn_mask" />
                     </div>
                 </div>
@@ -147,8 +163,10 @@
                     Контактное лицо:
                 </div>
                 <div class="col-12">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="ContactFio" class="form-control" />
                     </div>
                 </div>
@@ -160,8 +178,10 @@
                     Должность:
                 </div>
                 <div class="col-12">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="ContactPosition" class="form-control" />
                     </div>
                 </div>
@@ -181,8 +201,10 @@
                     Наименование банка:
                 </div>
                 <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="BankName" class="form-control" />
                     </div>
                 </div>
@@ -194,8 +216,10 @@
                     БИК:
                 </div>
                 <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="Bik" class="form-control bik_mask" />
                     </div>
                 </div>
@@ -207,8 +231,10 @@
                     Номер счета:
                 </div>
                 <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
+                    <div class="input-group">
+                        <span class="input-group-append input-group-icon">
+                            <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
+                        </span>
                         <input asp-for="NumAccount" class="form-control numaccount_mask" />
                     </div>
                 </div>
