--- a/Transfer.Web/Views/Report/DataInput.cshtml
+++ b/Transfer.Web/Views/Report/DataInput.cshtml
@@ -83,7 +83,7 @@
     {
         <hr style="color: #fff; border: dashed 1px #007896;">
         <div class="row">
-            <table style="width: 100%;">
+            <table border="1" style="width: 100%;" cellpadding="0" cellspacing="0">
                 <thead>
                     <tr>
                         <td>Дата (внесения данных)</td>
@@ -92,7 +92,7 @@
                         <td>ТС марка</td>
                         <td>ТС модель</td>
                         <td>Год</td>
-                        <td>Гос. номер </td>
+                        <td>Гос. номер</td>
                         <td>Посад. мест</td>
                         <td>СТС</td>
                         <td>ОСАГО</td>
@@ -122,6 +122,26 @@
                     }
                 </tbody>
             </table>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
         </div>
+    }
+    else
+    {
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
+        <div class="row blank-row"></div>
     }
 </div>
