--- a/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
+++ b/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
@@ -145,7 +145,7 @@
                                 <span class="input-group-append input-group-icon">
                                     <div class="input-group-text"><i class="fas fa-pencil-alt fa-lg"></i></div>
                                 </span>
-                                <input asp-for="Email" class="form-control" readonly="@(!Model.Id.IsNullOrEmpty())" />
+                                <input asp-for="Email" class="form-control" />
                             </div>
                         </div>
                     </div>
