--- a/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
+++ b/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
@@ -16,7 +16,7 @@
                 ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>
                 &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
                 &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@Model.OrganisationId">@Model.OrganisationName</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
-                @if (Model.Id.IsNullOrEmpty())
+            @if (Model.Id.IsNullOrEmpty())
             {
                 @:Новый пользователь
             }
@@ -153,13 +153,16 @@
             </div>
             <div class="row blank-row"></div>
             <div class="row form-row">
-                <div class="t-col the-error col-6 col-md-10">
+                <div class="t-col the-error col-6 col-md-8">
                     @if (!string.IsNullOrWhiteSpace(ViewBag.ErrorMsg))
                     {
                         <i class="fas fa-exclamation-triangle"></i> @ViewBag.ErrorMsg
                     }
                 </div>
-                <div class="t-col col-6 col-md-2 text-end">
+                <div class="t-col col-3 col-md-2 text-end">
+                    <button type="button" class="button-one-red" onclick="ConfirmPopup('@Url.Action("CarrierAccountItemDelete", "Account", new { carrierId = Model.OrganisationId, accountId = Model.Id })', 'Удалить пользователя?')">Удалить</button>
+                </div>
+                <div class="t-col col-3 col-md-2 text-end">
                     <button type="submit" class="button-one">Сохранить</button>
                 </div>
             </div>
