--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -73,7 +73,9 @@
                         @if (Security.HasAnyRightForSomeOrganisation(new List<Enum> { ReportAccessRights.DataInputReport }))
                         {
                             <a class="col-md-2 text-center" asp-controller="Report" asp-action="Index">Отчеты</a>
-                        } else {
+                        }
+                        else
+                        {
                             <a class="col-md-2 text-center" asp-controller="Account" asp-action="Reviews">Проверки</a>
                         }
                         <a class="col-md-2 text-center" asp-controller="Account" asp-action="Index">Личный кабинет</a>
@@ -216,13 +218,13 @@
                 <div class="container">
                     <div class="row blank-row"></div>
                     <div class="row">
-                        <div class="col-12 t-col confirm-action-text"><h4>Авторизация</h4></div>
+                        <div class="col-12 t-col confirm-action-text"><h4></h4><div class="body"></div></div>
                     </div>
                     <div class="row blank-row"></div>
                     <div class="row">
                         <div class="col-12 t-col text-end">
                             <button type="button" class="btn btn-default" data-bs-dismiss="modal" aria-label="Close">Отмена</button>
-                            <a class="btn btn-primary" style="background-color: #007896; border: 0;">Подтвердить</a>
+                            <a class="btn btn-primary btn-confirm" href="#" style="background-color: #007896; border: 0;">Подтвердить</a>
                         </div>
                     </div>
                     <div class="row blank-row"></div>
