--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -50,7 +50,7 @@
     <div class="row form-row"></div>
     <div class="row form-row">
         <div class="t-col col-12 white-text">
-            Регион(ы) работы:
+            Регион(ы) работы: <span class="red-text">*</span>
         </div>
     </div>
     <div class="row form-row">
