--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -223,7 +223,7 @@
                     <div class="row">
                         <div class="col-12 white-text">Форма оплаты:</div>
                         <div class="col-12 white-text">
-                            <div class="form-check form-check-inline">
+                            <!--<div class="form-check form-check-inline">
                                 <input asp-for="PaymentType" class="form-check-input" type="radio" id="PaymentType1" value="1">
                                 <label for="PaymentType1"><i class="fas fa-credit-card white-text"></i>&nbsp;&nbsp;Картой</label>
                             </div>
@@ -231,8 +231,9 @@
                                 <input asp-for="PaymentType" class="form-check-input" type="radio" id="PaymentType0" value="0">
                                 <label for="PaymentType0"><i class="fas fa-money-bill white-text"></i>&nbsp;&nbsp;Наличными</label>
                             </div>
+                            -->
                             <div class="form-check form-check-inline">
-                                <input asp-for="PaymentType" class="form-check-input" type="radio" id="PaymentType2" value="2">
+                                <input asp-for="PaymentType" class="form-check-input" type="radio" id="PaymentType2" value="2" checked>
                                 <label for="PaymentType2"><i class="fas fa-university white-text"></i>&nbsp;&nbsp;На расчётный счет</label>
                             </div>
                         </div>
