--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -42,14 +42,14 @@
                 }
                 else
                 {
-                    <div class="col-lg-3 col-md-12 text-center">
+                    <!--<div class="col-lg-3 col-md-12 text-center">
                         <a href="#" class="location">
                             <div>
                                 <i class="fas fa-location-arrow"></i>
                                 <span class="city">Александровск-Сахалинский</span>
                             </div>
                         </a>
-                    </div>
+                    </div>-->
                     <div class="col-lg-2 col-md-6 text-center">
                         <a class="top-button-reg-a" asp-controller="Home" asp-action="Registration">
                             <div class="top-button">Регистрация</div>
