--- a/Transfer.Web/Views/Report/TripRequests.cshtml
+++ b/Transfer.Web/Views/Report/TripRequests.cshtml
@@ -7,20 +7,20 @@
 }
 
     <div class="container">
-        <div class="row blank-row"></div>
-        <div class="row blank-row"></div>
+        <!--<div class="row blank-row"></div>
+        <div class="row blank-row"></div>-->
         <div class="row">
             <div class="t-col col-12 crumbs">
                 ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Report" asp-action="Index">Отчеты</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;@Model.Name
             </div>
         </div>
-        <div class="row blank-row"></div>
+        <!--<div class="row blank-row"></div>-->
         <div class="row">
             <div class="t-col col-12 col-md-6 crb-avatar">
                 Здравствуйте, @Security.CurrentAccount.FirstName @Security.CurrentAccount.LastName!
             </div>
         </div>
-        <div class="row blank-row"></div>
+        <!--<div class="row blank-row"></div>-->
         <div class="row">
             <div class="t-col col-12">
                 <h1 style="color: #0f4c71">@Model.Name</h1>
