--- a/Transfer.Web/Views/TripRequest/Show.cshtml
+++ b/Transfer.Web/Views/TripRequest/Show.cshtml
@@ -15,21 +15,21 @@
 }
 
 <div class="container">
-    <div class="row blank-row"></div>
-    <div class="row blank-row"></div>
+    <!--<div class="row blank-row"></div>
+    <div class="row blank-row"></div>-->
     <div class="row">
         <div class="t-col col-12 crumbs">
             ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="TripRequest" asp-action="Search">Поездки</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;
             <a class="top-button-a" asp-action="TripRequestShow" asp-controller="TripRequest" asp-route-requestId="@Model.Id">Заказ №@Model.Identifier от @Model.ChartererName @($"({Model.TripDate:dd.MM.yyyy})")</a>
         </div>
     </div>
-    <div class="row blank-row"></div>
+    <!--<div class="row blank-row"></div>-->
     <div class="row">
         <div class="t-col col-12 col-md-6 crb-avatar">
             Здравствуйте, @Security.CurrentAccount.FirstName @Security.CurrentAccount.LastName!
         </div>
     </div>
-    <div class="row blank-row"></div>
+    <!--<div class="row blank-row"></div>-->
     <div class="row">
         <div class="t-col col-10">
             <h1 style="color: #0f4c71">Просмотр заказа</h1>
