--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -8,6 +8,7 @@
 
 <div class="row blank-row"></div>
 @Html.HiddenFor(x => x.PageNumber)
+@Html.HiddenFor(x => x.MyRequests)
 <div class="row">
     <div class="col-12 col-lg-4 t-col dark-text"></div>
     <div class="t-col col-12 col-md-6 col-lg-2 form-group">
