--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -83,7 +83,8 @@
                         {
                             <a class="col-md-2 text-center" asp-controller="Account" asp-action="Reviews">Проверки</a>
                         }
-                        <a class="col-md-2 text-center" asp-controller="Account" asp-action="Index">Личный кабинет</a>
+                        @*<a class="col-md-2 text-center" asp-controller="Account" asp-action="Index">Личный кабинет</a>*@
+                        <a class="col-md-2 text-center" asp-controller="TripRequest" asp-action="SearchMyTripRequests">Мои запросы</a>
                     </div>
                 }
                 else
